# AMB

./: .gitignore  ALMALINUX_SETUP.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  README.md  VULTR_GUIDE.md  deploy.sh  monitor.sh  pyproject.toml  requirements.txt  setup_gateway_service.sh  test_ibkr_connection.py
.github/: copilot-instructions.md
config/: defaults.yaml
deploy/: DEPLOY-IBGATEWAY.md  OVH_SETUP.md  amb-bot.service  amb-bot.timer  deploy.sh  diagnose-install.sh  ibc-config-template.ini  ibc-config.ini  ibgateway-standalone.service  ibgateway.service  install-ibgateway-standalone.sh  install.sh  start-ibgateway-ibc.sh  start-ibgateway.sh
src/amb_bot/: backtest_utils.py  budget.py  config.py  dashboard.py  indicators.py  main.py  monitor.py  opportunities.py  strategy.py  tui.py
src/amb_bot/broker/: __init__.py  backtest.py  base.py  fast_backtest.py  ibkr.py  paper.py
tests/: test_config.py
