[tool.poetry]
name = "amb-bot"
version = "0.1.0"
description = "Automated EU/US equities DCA bot with stop-loss and take-profit guards."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "amb_bot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
pyyaml = "^6.0"
httpx = "^0.27"
python-dotenv = "^1.0"
typer = "^0.12"
rich = ">=14.2.0"
textual = "^6.7.1"
ib-insync = "^0.9.86"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.4"
black = "^24.4"

[tool.poetry.scripts]
amb-bot = "amb_bot.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
